
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* Malloc (int) ;
 int atoi (char*) ;
 int free (char*) ;
 char* read_sock (int) ;
 char* strchr (char*,char) ;
 int strncpy (char*,char*,int) ;
 int write_sock (int,char*) ;

char *ftp_gethomedir(int sock)
{
    char *recvbuf;
    char *homedir = ((void*)0);

    write_sock(sock, "CWD ~\n");
    recvbuf = read_sock(sock);

    if(atoi(recvbuf) == 250)
    {
 write_sock(sock, "PWD\n");
 recvbuf = read_sock(sock);

 if(atoi(recvbuf) == 257)
 {
     char *front, *back;

     front = strchr(recvbuf, '"');
     front++;
     back = strchr(front, '"');

     homedir = Malloc((back - front) * sizeof(char));
     strncpy(homedir, front, (back - front));
     homedir[(back - front)] = 0x0;
 }
    }

    free(recvbuf);
    return homedir;
}
