; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/bsd/remote/extr_20731.c_ftp_gethomedir.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/bsd/remote/extr_20731.c_ftp_gethomedir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"CWD ~\0A\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"PWD\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ftp_gethomedir(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i8* null, i8** %4, align 8
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @write_sock(i32 %7, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %9 = load i32, i32* %2, align 4
  %10 = call i8* @read_sock(i32 %9)
  store i8* %10, i8** %3, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @atoi(i8* %11)
  %13 = icmp eq i32 %12, 250
  br i1 %13, label %14, label %54

14:                                               ; preds = %1
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @write_sock(i32 %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %17 = load i32, i32* %2, align 4
  %18 = call i8* @read_sock(i32 %17)
  store i8* %18, i8** %3, align 8
  %19 = load i8*, i8** %3, align 8
  %20 = call i32 @atoi(i8* %19)
  %21 = icmp eq i32 %20, 257
  br i1 %21, label %22, label %53

22:                                               ; preds = %14
  %23 = load i8*, i8** %3, align 8
  %24 = call i8* @strchr(i8* %23, i8 signext 34)
  store i8* %24, i8** %5, align 8
  %25 = load i8*, i8** %5, align 8
  %26 = getelementptr inbounds i8, i8* %25, i32 1
  store i8* %26, i8** %5, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = call i8* @strchr(i8* %27, i8 signext 34)
  store i8* %28, i8** %6, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = load i8*, i8** %5, align 8
  %31 = ptrtoint i8* %29 to i64
  %32 = ptrtoint i8* %30 to i64
  %33 = sub i64 %31, %32
  %34 = mul i64 %33, 1
  %35 = trunc i64 %34 to i32
  %36 = call i8* @Malloc(i32 %35)
  store i8* %36, i8** %4, align 8
  %37 = load i8*, i8** %4, align 8
  %38 = load i8*, i8** %5, align 8
  %39 = load i8*, i8** %6, align 8
  %40 = load i8*, i8** %5, align 8
  %41 = ptrtoint i8* %39 to i64
  %42 = ptrtoint i8* %40 to i64
  %43 = sub i64 %41, %42
  %44 = trunc i64 %43 to i32
  %45 = call i32 @strncpy(i8* %37, i8* %38, i32 %44)
  %46 = load i8*, i8** %4, align 8
  %47 = load i8*, i8** %6, align 8
  %48 = load i8*, i8** %5, align 8
  %49 = ptrtoint i8* %47 to i64
  %50 = ptrtoint i8* %48 to i64
  %51 = sub i64 %49, %50
  %52 = getelementptr inbounds i8, i8* %46, i64 %51
  store i8 0, i8* %52, align 1
  br label %53

53:                                               ; preds = %22, %14
  br label %54

54:                                               ; preds = %53, %1
  %55 = load i8*, i8** %3, align 8
  %56 = call i32 @free(i8* %55)
  %57 = load i8*, i8** %4, align 8
  ret i8* %57
}

declare dso_local i32 @write_sock(i32, i8*) #1

declare dso_local i8* @read_sock(i32) #1

declare dso_local i32 @atoi(i8*) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i8* @Malloc(i32) #1

declare dso_local i32 @strncpy(i8*, i8*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
